--- a/green.css
+++ b/green.css
@@ -1,7 +1,7 @@
 
 :root {
-    --mainColor: #606B56;
-    --secondaryColor:#515a48;
+    --mainColor: #008000;
+    --secondaryColor:#005900;
 
     --borderColor:#161914;
 
@@ -10,10 +10,10 @@
 
     --themeDotBorder:#fff;
 
-    --previewBg: rgb(81, 90, 72, 0.8);
-    --previewShadow: #2a2f25;
+    --previewBg: rgb(0, 51, 0, 0.8);
+    --previewShadow: #003300;
 
-    --btnColor: #669966;
+    --btnColor: #007f00;
 }
 
 .post-intro {
