--- a/purple.css
+++ b/purple.css
@@ -10,9 +10,9 @@
 
     --themeDotBorder:#fff;
 
-    --previewBg: rgb(29, 21, 32, 0.8);
-    --previewShadow: #2b202f;
+    --previewBg: rgb(89, 0, 89, 0.8);
+    --previewShadow: #250025;
 
-    --btnColor: #8534a3;
+    --btnColor: #800080;
 }
 
