--- a/style.css
+++ b/style.css
@@ -289,11 +289,17 @@ h6 { font-size: 16px;}
     text-align: center;
 }
 
-#social-img {
+.social-links img {
     width: 100%;
 }
 
-.post-wrapper {
+/* @media (max-width: 500px) {
+    .about-wrapper {
+        display: flex;
+    }
+} */
+
+/* .post-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, 320px);
     gap: 20px;
@@ -329,7 +335,56 @@ h6 { font-size: 16px;}
 .post-intro {
     color: #4b5156;
     font-size: 14px;
-}
+} */
+
+.post-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 20px;
+    justify-content: center;
+    padding-bottom: 50px;
+  }
+  
+  .post {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--borderColor);
+    box-shadow: -2px 6px 9px -1px rgba(0, 0, 0, 0.75);
+  }
+  
+  .thumbnail {
+    display: block;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+  }
+  
+  .post-preview {
+    background-color: var(--secondaryColor);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .post-title {
+    color: #000;
+    margin: 0;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .post-intro {
+    color: #4b5156;
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+  
+  a {
+    color: #333;
+    text-decoration: underline;
+  }
+  
 
 #contact-form {
     display: block;
